css issues on mobile fixed

--- a/client/lene-todo-app/src/index.css
+++ b/client/lene-todo-app/src/index.css
@@ -55,14 +55,19 @@ body {
 .standard-h1 {
     font-size: 50px;
     text-align: center;
-    margin: 20px;
+    margin: 20px 0;
     color: var(--primary-color);
 }
 
 /* List styling */
 
+.single-list-container {
+    padding: 0 30px;
+}
+
 .list-info-container {
     background: rgb(255, 255, 255);
+    width: 100%;
     display: grid;
     justify-items: center;
     align-items: center;
@@ -71,7 +76,7 @@ body {
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     position: relative;
-    margin: 30px;
+    margin: 30px 0;
     border-bottom: 2px solid transparent;
     text-align: center;
 }
@@ -201,7 +206,7 @@ select:hover {
 }
 
   .add-list-form[data-isopen="true"] {
-    width: clamp(300px, 60%, 600px);
+    width: clamp(200px, 100%, 400px);
     border-radius: 10px;
     padding: 20px 60px 20px 60px;
     margin: 50px auto;
@@ -424,11 +429,15 @@ select:hover {
 
 /* List Overview */
 
+.todo-list-page-padding {
+    padding: 0 30px;
+}
+
 .list-overview-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin: 30px;
+    margin: 30px 0;
     max-width: 100%;
 }
 
@@ -687,13 +696,14 @@ select:hover {
 display: grid;
 grid-template-columns: 1fr 1fr;
 gap: 20px;
-margin: 30px;
+margin: 30px 0;
 justify-items: center;
 }
 
 .single-todo-container {
     background: rgb(255, 255, 255);
-    width: clamp(200px, 100%, 800px);
+    /* width: clamp(100px, 100%, 800px); */
+    width: 100%;
     padding: 20px 50px 20px 20px;
     border-radius: 10px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
@@ -1289,14 +1299,31 @@ form.add-todo-form label:nth-of-type(2) {
     }
 
     .list-info-container {
-        grid-template-columns: 1fr;
+        grid-template-areas:
+        "title title"
+        "left right";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto 1fr;
+    }
+
+    .single-todo-oppgaver {
+        grid-area: left;
+    }
+
+    .single-todo-title {
+        grid-area: title;
+    }
+
+    .single-todo-ferdig {
+        grid-area: right;
     }
 
     .todos-container {
         display: grid;
         grid-template-columns: 1fr;
         gap: 20px;
-        margin: 30px;
+        margin: 30px 0;
+        width: 100%;
         }
     
     .drag-container {
